--- a/views/layouts/BoilerPlate.ejs
+++ b/views/layouts/BoilerPlate.ejs
@@ -26,27 +26,7 @@
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                 crossorigin="anonymous"></script>
-            <script>
-                // BOOTSTRAP JAVASCRIPT CODE TO DISABLE FORM SUBMISSIONS IF THERE ARE INVALID FIELDS
-                (function () {
-                    'use strict';
-
-                    // FETCH ALL THE FORMS WE WANT TO APPLY CUSTOM BOOTSTRAP VALIDATION STYLES TO
-                    const forms = document.querySelectorAll('.needs-validation');
-
-                    // LOOP OVER THEM AND PREVENT DEFAULT SUBMISSION BEHAVIOUR.
-                    Array.from(forms)
-                        .forEach(function (form) {
-                            form.addEventListener('submit', function (event) {
-                                if (!form.checkValidity()) {
-                                    event.preventDefault();
-                                    event.stopPropagation();
-                                }
-                                form.classList.add('was-validated');
-                            }, false);
-                        });
-                })();
-            </script>
+            <script src="/JS/BootStrap Form Validations.js"></script>
 </body>
 
 </html>
