--- a/views/campgrounds/Edit.ejs
+++ b/views/campgrounds/Edit.ejs
@@ -1,87 +1,79 @@
 <% layout('/layouts/BoilerPlate') %>
     <div class="row">
         <h1 class="text-center">Edit a campground</h1>
-        <% if(error){ %>
-            <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                <%= error %><button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-            </div>
-            <% } %>
-                <div class="col-6 offset-3">
-                    <p style="color: red;" class="mt-2">* Mandatory Fields</p>
-                    <form action="/campgrounds?_method=PATCH" method="post" class="needs-validation" novalidate>
-                        <% if(campground.imageURL) { %>
-                            <img src="<%=campground.imageURL%> " alt="Campground Image" class="img-fluid mb-3">
-                            <% } %>
-                                <div class="mb-3">
-                                    <label for="id" class="form-label">Registration Id : </label>
-                                    <input type="text" class="form-control" name="id" id="id"
-                                        value="<%=campground._id%>" readonly>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="title" class="form-label">Campground Title<span
-                                            style="color: red;">*</span> :
-                                    </label>
-                                    <input type="text" class="form-control" name="campground[title]" id="title"
-                                        placeholder="Enter campground title" value="<%=campground.title%>" required>
+        <div class="col-6 offset-3">
+            <p style="color: red;" class="mt-2">* Mandatory Fields</p>
+            <form action="/campgrounds?_method=PATCH" method="post" class="needs-validation" novalidate>
+                <% if(campground.imageURL) { %>
+                    <img src="<%=campground.imageURL%> " alt="Campground Image" class="img-fluid mb-3">
+                    <% } %>
+                        <div class="mb-3">
+                            <label for="id" class="form-label">Registration Id : </label>
+                            <input type="text" class="form-control" name="id" id="id" value="<%=campground._id%>"
+                                readonly>
+                        </div>
+                        <div class="mb-3">
+                            <label for="title" class="form-label">Campground Title<span style="color: red;">*</span> :
+                            </label>
+                            <input type="text" class="form-control" name="campground[title]" id="title"
+                                placeholder="Enter campground title" value="<%=campground.title%>" required>
+                            <div class="valid-feedback">
+                                Looks good!
+                            </div>
+                            <div class="invalid-feedback">
+                                Please provide a valid title.
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="imageURL" class="form-label">Campground Image URL (Optional) : </label>
+                            <input type="text" class="form-control" name="campground[imageURL]" id="imageURL"
+                                placeholder="Enter campground image url" <% if(campground.imageURL) { %>
+                            value="<%=campground.imageURL%>"<%}%>>
                                     <div class="valid-feedback">
                                         Looks good!
                                     </div>
-                                    <div class="invalid-feedback">
-                                        Please provide a valid title.
-                                    </div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="price" class="form-label">Campground Price<span style="color: red;">*</span> :
+                            </label>
+                            <div class="input-group">
+                                <span class="input-group-text">Rupees </span>
+                                <input type="text" class="form-control" name="campground[price]" id="price"
+                                    placeholder="Enter campground price" value="<%=campground.price%>" required>
+                                <div class="valid-feedback">
+                                    Looks good!
                                 </div>
-                                <div class="mb-3">
-                                    <label for="imageURL" class="form-label">Campground Image URL (Optional) : </label>
-                                    <input type="text" class="form-control" name="campground[imageURL]" id="imageURL"
-                                        placeholder="Enter campground image url" <% if(campground.imageURL) { %>
-                                    value="<%=campground.imageURL%>"<%}%>>
-                                            <div class="valid-feedback">
-                                                Looks good!
-                                            </div>
+                                <div class="invalid-feedback">
+                                    Please provide a valid price.
                                 </div>
-                                <div class="mb-3">
-                                    <label for="price" class="form-label">Campground Price<span
-                                            style="color: red;">*</span> :
-                                    </label>
-                                    <div class="input-group">
-                                        <span class="input-group-text">Rupees </span>
-                                        <input type="text" class="form-control" name="campground[price]" id="price"
-                                            placeholder="Enter campground price" value="<%=campground.price%>" required>
-                                        <div class="valid-feedback">
-                                            Looks good!
-                                        </div>
-                                        <div class="invalid-feedback">
-                                            Please provide a valid price.
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="location" class="form-label">Campground Location<span
-                                            style="color: red;">*</span> :
-                                    </label>
-                                    <input type="text" class="form-control" name="campground[location]" id="location"
-                                        placeholder="Enter campground location" value="<%=campground.location%>"
-                                        required>
-                                    <div class="valid-feedback">
-                                        Looks good!
-                                    </div>
-                                    <div class="invalid-feedback">
-                                        Please provide a valid location.
-                                    </div>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="description" class="form-label">Campground Description (Optional) :
-                                    </label>
-                                    <textarea class="form-control" name="campground[description]" id="description"
-                                        cols="30" rows="3"
-                                        placeholder="Enter campground description"><% if(campground.description) { %><%=campground.description%><% } %></textarea>
-                                    <div class="valid-feedback">
-                                        Looks good!
-                                    </div>
-                                </div>
-                                <button type="submit" class="btn btn-success btn-sm">Submit</button>
-                                <button type="reset" class="btn btn-danger btn-sm">Reset</button>
-                    </form>
-                    <a href="/campgrounds" class="btn btn-secondary btn-sm mt-3">Go Back</a>
-                </div>
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="location" class="form-label">Campground Location<span
+                                    style="color: red;">*</span> :
+                            </label>
+                            <input type="text" class="form-control" name="campground[location]" id="location"
+                                placeholder="Enter campground location" value="<%=campground.location%>" required>
+                            <div class="valid-feedback">
+                                Looks good!
+                            </div>
+                            <div class="invalid-feedback">
+                                Please provide a valid location.
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="description" class="form-label">Campground Description (Optional) :
+                            </label>
+                            <textarea class="form-control" name="campground[description]" id="description" cols="30"
+                                rows="3"
+                                placeholder="Enter campground description"><% if(campground.description) { %><%=campground.description%><% } %></textarea>
+                            <div class="valid-feedback">
+                                Looks good!
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-success btn-sm">Submit</button>
+                        <button type="reset" class="btn btn-danger btn-sm">Reset</button>
+            </form>
+            <a href="/campgrounds" class="btn btn-secondary btn-sm mt-3">Go Back</a>
+        </div>
     </div>
