--- a/views/campgrounds/New.ejs
+++ b/views/campgrounds/New.ejs
@@ -1,76 +1,68 @@
 <% layout('/layouts/BoilerPlate') %>
     <div class="row">
         <h1 class="text-center">Create a new campground</h1>
-        <% if(error){ %>
-            <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                <%= error %><button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-            </div>
-            <% } %>
-                <div class="col-6 offset-3">
-                    <p style="color: red;" class="mb-2 mt-2">* Mandatory Fields</p>
-                    <form action="/campgrounds" method="post" class="needs-validation" novalidate>
-                        <div class="mb-3">
-                            <label for="title" class="form-label">Enter Campground Title<span
-                                    style="color: red;">*</span> :
-                            </label>
-                            <input type="text" class="form-control" name="campground[title]" id="title"
-                                placeholder="Enter campground title" required>
-                            <div class="valid-feedback">
-                                Looks good!
-                            </div>
-                            <div class="invalid-feedback">
-                                Please provide a valid title.
-                            </div>
-                        </div>
-                        <div class="mb-3">
-                            <label for="image" class="form-label">Enter Campground Image URL (Optional) : </label>
-                            <input type="text" class="form-control" name="campground[imageURL]" id="image"
-                                placeholder="Enter campground image url">
-                            <div class="valid-feedback">
-                                Looks good!
-                            </div>
-                        </div>
-                        <div class="mb-3">
-                            <label for="price" class="form-label">Enter Campground Price<span
-                                    style="color: red;">*</span> :
-                            </label>
-                            <div class="input-group">
-                                <span class="input-group-text">Rupees </span>
-                                <input type="text" class="form-control" name="campground[price]" id="price"
-                                    placeholder="0" required>
-                                <div class="valid-feedback">
-                                    Looks good!
-                                </div>
-                                <div class="invalid-feedback">
-                                    Please provide a valid price.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="mb-3">
-                            <label for="location" class="form-label">Enter Campground Location<span
-                                    style="color: red;">*</span> :
-                            </label>
-                            <input type="text" class="form-control" name="campground[location]" id="location"
-                                placeholder="Enter campground location" required>
-                            <div class="valid-feedback">
-                                Looks good!
-                            </div>
-                            <div class="invalid-feedback">
-                                Please provide a valid location.
-                            </div>
-                        </div>
-                        <div class="mb-3">
-                            <label for="description" class="form-label">Enter Campground Description (Optional) :
-                            </label>
-                            <textarea class="form-control" name="campground[description]" id="description" cols="30"
-                                rows="3" placeholder="Enter campground description"></textarea>
-                            <div class="valid-feedback">
-                                Looks good!
-                            </div>
-                        </div>
-                        <button type="submit" class="btn btn-success btn-sm">Submit</button>
-                        <button type="reset" class="btn btn-danger btn-sm">Reset</button>
-                    </form>
-                    <a href="/campgrounds" class="btn btn-secondary btn-sm mt-3">Go Back</a>
+        <div class="col-6 offset-3">
+            <p style="color: red;" class="mb-2 mt-2">* Mandatory Fields</p>
+            <form action="/campgrounds" method="post" class="needs-validation" novalidate>
+                <div class="mb-3">
+                    <label for="title" class="form-label">Enter Campground Title<span style="color: red;">*</span> :
+                    </label>
+                    <input type="text" class="form-control" name="campground[title]" id="title"
+                        placeholder="Enter campground title" required>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
+                    <div class="invalid-feedback">
+                        Please provide a valid title.
+                    </div>
                 </div>
+                <div class="mb-3">
+                    <label for="image" class="form-label">Enter Campground Image URL (Optional) : </label>
+                    <input type="text" class="form-control" name="campground[imageURL]" id="image"
+                        placeholder="Enter campground image url">
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label for="price" class="form-label">Enter Campground Price<span style="color: red;">*</span> :
+                    </label>
+                    <div class="input-group">
+                        <span class="input-group-text">Rupees </span>
+                        <input type="text" class="form-control" name="campground[price]" id="price" placeholder="0"
+                            required>
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                        <div class="invalid-feedback">
+                            Please provide a valid price.
+                        </div>
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label for="location" class="form-label">Enter Campground Location<span style="color: red;">*</span>
+                        : </label>
+                    <input type="text" class="form-control" name="campground[location]" id="location"
+                        placeholder="Enter campground location" required>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
+                    <div class="invalid-feedback">
+                        Please provide a valid location.
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label for="description" class="form-label">Enter Campground Description (Optional) :
+                    </label>
+                    <textarea class="form-control" name="campground[description]" id="description" cols="30" rows="3"
+                        placeholder="Enter campground description"></textarea>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-success btn-sm">Submit</button>
+                <button type="reset" class="btn btn-danger btn-sm">Reset</button>
+            </form>
+            <a href="/campgrounds" class="btn btn-secondary btn-sm mt-3">Go Back</a>
+        </div>
     </div>
