--- a/views/campgrounds/Show.ejs
+++ b/views/campgrounds/Show.ejs
@@ -74,39 +74,31 @@
                             <h4>Leave a Review</h4>
                         </div>
                         <div class="card-body">
-                            <% if(error){ %>
-                                <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                                    <%= error %><button type="button" class="btn-close"
-                                            data-bs-dismiss="alert"></button>
+                            <p style="color: red;" class="mb-2">* Mandatory Fields</p>
+                            <form action="/campgrounds/<%=campground._id%>/reviews" method="post"
+                                class="needs-validation" novalidate>
+                                <div class="mb-3">
+                                    <label for="rating" class="form-label">Rating<span style="color: red;">*</span>
+                                        :
+                                    </label>
+                                    <input class="form-range" type="range" min="1" max="5" step="1"
+                                        name="review[rating]" id="rating">
                                 </div>
-                                <% } %>
-                                    <p style="color: red;" class="mb-2">* Mandatory Fields</p>
-                                    <form action="/campgrounds/<%=campground._id%>/reviews" method="post"
-                                        class="needs-validation" novalidate>
-                                        <div class="mb-3">
-                                            <label for="rating" class="form-label">Rating<span
-                                                    style="color: red;">*</span>
-                                                :
-                                            </label>
-                                            <input class="form-range" type="range" min="1" max="5" step="1"
-                                                name="review[rating]" id="rating">
-                                        </div>
-                                        <div class="mb-3">
-                                            <label for="body" class="form-label">Review<span
-                                                    style="color: red;">*</span> :
-                                            </label>
-                                            <textarea class="form-control" name="review[body]" id="body" cols="30"
-                                                rows="3" placeholder="Give us your feedback" required></textarea>
-                                            <div class="valid-feedback">
-                                                Looks good!
-                                            </div>
-                                            <div class="invalid-feedback">
-                                                Please provide us your feeback.
-                                            </div>
-                                        </div>
-                                        <button type="submit" class="btn btn-success btn-sm">Submit</button>
-                                        <button type="reset" class="btn btn-danger btn-sm">Reset</button>
-                                    </form>
+                                <div class="mb-3">
+                                    <label for="body" class="form-label">Review<span style="color: red;">*</span> :
+                                    </label>
+                                    <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3"
+                                        placeholder="Give us your feedback" required></textarea>
+                                    <div class="valid-feedback">
+                                        Looks good!
+                                    </div>
+                                    <div class="invalid-feedback">
+                                        Please provide us your feeback.
+                                    </div>
+                                </div>
+                                <button type="submit" class="btn btn-success btn-sm">Submit</button>
+                                <button type="reset" class="btn btn-danger btn-sm">Reset</button>
+                            </form>
                         </div>
                     </div>
         </div>
