--- a/views/campgrounds/Index.ejs
+++ b/views/campgrounds/Index.ejs
@@ -17,22 +17,28 @@
                             <h1 class="card-title">
                                 <%=campground.title%>
                             </h1>
-                            <div class="card-text">
+                            <div class="card-text mb-3">
                                 <small class="text-muted">
                                     <%=campground.location%>
                                 </small>
                                 <p class="mt-3">
-                                    Price: Rs. <%=campground.price%>/-
+                                    <b>Price:</b> Rs. <%=campground.price%>/-
+                                </p>
+                                <p class="mt-3">
+                                    <b>Suggested By:</b>
+                                    <%=campground.author.username%>
                                 </p>
                                 <p class="mt-3">
                                     <%=campground.description%>
                                 </p>
                             </div>
                             <a href="/campgrounds/<%=campground._id%>" class="card-link btn btn-primary btn-sm">View</a>
-                            <a href="/campgrounds/<%=campground._id%>/edit"
-                                class="card-link btn btn-warning btn-sm">Edit</a>
-                            <a href="/campgrounds/<%=campground._id%>/remove"
-                                class="card-link btn btn-danger btn-sm">Delete</a>
+                            <% if(currentUser && currentUser.equals(campground.author)) { %>
+                                <a href="/campgrounds/<%=campground._id%>/edit"
+                                    class="card-link btn btn-warning btn-sm">Edit</a>
+                                <a href="/campgrounds/<%=campground._id%>/remove"
+                                    class="card-link btn btn-danger btn-sm">Delete</a>
+                                <% } %>
                         </div>
                     </div>
                 </div>
