--- a/views/campgrounds/Index.ejs
+++ b/views/campgrounds/Index.ejs
@@ -8,9 +8,12 @@
             <div class="card mb-3">
                 <div class="row">
                     <div class="col-md-4">
-                        <% if(campground.imageURL) { %>
-                            <img src="<%=campground.imageURL%> " alt="Campground Image" class="img-fluid">
-                            <% } %>
+                        <% if(campground.images[0]) { %>
+                            <img src="<%=campground.images[0].url%> " alt="Campground Image" class="img-fluid">
+                            <% } else {%>
+                                <img src="https://res.cloudinary.com/dtwgxcqkr/image/upload/v1675496482/YelpCamp%20Related%20Media/No_Image_Available_onn3wa.webp"
+                                    alt="No Image Available" class="img-fluid">
+                                <% } %>
                     </div>
                     <div class="col-md-8">
                         <div class="card-body py-5">
